working particles example

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,8 @@ layout: compress
       </div>
     </div>
 
+    {% include particles.html %}
+
     <main class="site__content">
       <section class="blog">
         <div class="container">
@@ -42,9 +44,9 @@ layout: compress
         </div>
       </section>
     </main>
-
     {% include footer.html %}
 
   </body>
+
 
 </html>
