--- a/_includes/particles.html
+++ b/_includes/particles.html
@@ -13,11 +13,14 @@
 
 </style>
 
-<script src="{{ "/assets/js/particles.min.js" | relative_url }}"></script>
+<script async src="{{ "/assets/js/particles.min.js" | relative_url }}"></script>
 
 <script async>
+document.addEventListener("DOMContentLoaded", function(event) { 
     particlesJS.load('particles-js', '{{ "/assets/json/particles.json" | relative_url }}', function() {
   console.log('callback - particles.js config loaded');
 });
+});
+
 
 </script>
