--- a/_includes/particles.html
+++ b/_includes/particles.html
@@ -2,7 +2,7 @@
 
 <script src='{{ "/assets/js/tsparticles.slim.bundle.min.js" | relative_url }}' fetchpriority="low"></script>
 
-<script fetchpriority="low">
+<script async fetchpriority="low">
 
 tsParticles.load("particles-js", {
   fps_limit: 120,
