--- a/_includes/particles.html
+++ b/_includes/particles.html
@@ -1,5 +1,13 @@
 <div id="particles-js"></div>
 
+<style>
+#particles-js {
+  position: relative;
+  height: 100% !important;
+  width: 100% !important;
+  /* background-color: #212529; could go on .outer-container as well */
+}
+</style>
 <script src='{{ "/assets/js/tsparticles.slim.bundle.min.js" | relative_url }}' fetchpriority="low"></script>
 
 <script async fetchpriority="low">
