--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,14 +19,14 @@ layout: compress
 
     {% include header.html %}
 
-    <div class="hero lazyload" data-bg="{{ site.url }}{{ site.baseurl }}/assets/img/{{ site.hero_img }}">
+    <div class="hero lazyload" style="height: 100vh !important;" data-bg="{{ site.url }}{{ site.baseurl }}/assets/img/{{ site.hero_img }}">
+      {% include particles.html %}
       <div class="hero__wrap">
         <h1 class="hero__title">{{ site.title | escape }}</h1>
         <p class="hero__meta">{{ site.tagline }}</p>
       </div>
     </div>
 
-    {% include particles.html %}
 
     <main class="site__content">
       <section class="blog">
