--- a/_includes/particles.html
+++ b/_includes/particles.html
@@ -1,19 +1,24 @@
 <div id="particles-js"></div>
 
-<style>
-#particles-js {
-  position: relative;
-  height: 100% !important;
-  width: 100% !important;
-  /* background-color: #212529; could go on .outer-container as well */
-}
-</style>
+<!-- <style>
+  #particles-js {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: ;
+  }
+</style> -->
+
 <script src='{{ "/assets/js/tsparticles.slim.bundle.min.js" | relative_url }}' fetchpriority="low"></script>
 
 <script async fetchpriority="low">
 
 tsParticles.load("particles-js", {
   fps_limit: 120,
+  width: "100%",
+  height: "100%",
   interactivity: {
     detect_on: "canvas",
     events: {
