--- a/_includes/card.html
+++ b/_includes/card.html
@@ -8,7 +8,7 @@
       {% endfor %}
     </span>
   {% endif %}
-  <a href="{{ post.url | relative_url }}">
+  <a href="{% if post.link %} https://{{ post.link }} {% else %} {{ post.url | relative_url }} {% endif %}">
     {% if post.featured-img %}
       <figure class="post-card__thumb">
         <img
@@ -25,7 +25,7 @@
       </figure>
     {% endif %}
   </a>
-  <a class="post-card__inner" href="{{ post.url | relative_url }}">
+  <a class="post-card__inner" href="{% if post.link %} https://{{ post.link }} {% else %} {{ post.url | relative_url }} {% endif %}">
     <div class="post-card__header">
       <h2>{{ post.title | strip_html | truncate: 50 }}</h2>
       {% assign date_format = site.sleek.date_format | default: "%b %-d, %Y" %}
